# lanctrl

./: .cursorrules  .gitignore  README.md
lanctrl-pc/: .cursorrules  Cargo.toml
lanctrl-pc/control/: Cargo.toml
lanctrl-pc/control/src/: lib.rs  media.rs
lanctrl-pc/lanctrl-auth/: Cargo.toml
lanctrl-pc/lanctrl-control/: Cargo.toml
lanctrl-pc/lanctrl-control/src/: media.rs  system.rs
lanctrl-pc/lanctrl-scheduler/: Cargo.toml
lanctrl-pc/lanctrl-scheduler/src/: lib.rs
lanctrl-pc/lanctrl-service/: Cargo.toml
lanctrl-pc/lanctrl-service/src/: lib.rs
lanctrl-pc/lanctrl-storage/: Cargo.toml
lanctrl-pc/lanctrl-ui/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
lanctrl-pc/lanctrl-ui/src/: App.vue  style.css
lanctrl-pc/lanctrl-ui/src-tauri/: Cargo.toml  tauri.conf.json
lanctrl-pc/lanctrl-ui/src-tauri/capabilities/: default.json
lanctrl-pc/lanctrl-web/: README.md  package-lock.json  package.json
lanctrl-pc/lanctrl-web/src/: App.vue  MorphIcon.vue  api.ts  index.html  main.js  types.ts  useTheme.ts  useWebConsole.ts
lanctrl-pc/scheduler/: Cargo.toml
lanctrl-pc/scheduler/src/: lib.rs
lanctrl-pc/service/: Cargo.toml
lanctrl-pc/service/src/: lib.rs
lanctrl-pc/transport/: Cargo.toml
lanctrl-pc/ui/: README.md  package-lock.json  package.json
lanctrl-pc/ui/src/: App.vue  main.ts
lanctrl-pc/ui/src-tauri/: Cargo.toml  tauri.conf.json
lanctrl-pc/web/: README.md  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
lanctrl-pc/web/src/: App.vue  api.ts  types.ts  useWebConsole.ts
(+130 files in other folders)
