[workspace]
resolver = "2"
members = [
    "lanctrl-service",
    "lanctrl-transport",
    "lanctrl-auth",
    "lanctrl-control",
    "lanctrl-scheduler",
    "lanctrl-share",
    "lanctrl-storage",
    "lanctrl-discovery",
    "lanctrl-common",
    "lanctrl-ui/src-tauri",
]

[profile.dev]
debug = 1
